--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>React Tutorial</title>
-    <script type="module" crossorigin src="/index-a5f3082b.js"></script>
-    <link rel="stylesheet" href="/index-91ee4cc1.css">
+    <script type="module" crossorigin src="./index-a5f3082b.js"></script>
+    <link rel="stylesheet" href="./index-91ee4cc1.css">
   </head>
   <body>
     <div id="content"></div>
